--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
     <div class="container">
       <aside>
-        <button id="add-user">Add User</button>
-        <button id="double">Double Money</button>
-        <button id="show-millionaires">Show Only Millionaires</button>
-        <button id="sort">Sort by Richest</button>
-        <button id="calculate-wealth">Calculate entire wealth</button>
+        <button id="add-user">Add User 🙍🏼‍♂️</button>
+        <button id="double">Double Money 💰</button>
+        <button id="show-millionaires">Show Only Millionaires 🤑</button>
+        <button id="sort">Sort by Richest 🏆</button>
+        <button id="calculate-wealth">Calculate entire wealth 🏡</button>
       </aside>
 
       <main id="main">
-        <h2><strong>Person</strong>wealth</h2>
+        <h2><strong>Person</strong> Wealth</h2>
       </main>
     </div>
 
